# Adorable-King

./: .env  bot.py  config.json  keep_alive.py  package-lock.json  package.json  pyproject.toml  requirements.txt
cogs/: fun.py  general.py  moderation.py  music.py  owner.py  talk.py  template.py
database/: database.db  schema.sql
exceptions/: __init__.py
helpers/: checks.py  db_manager.py
