[tool.poetry]
name = "Adorable King"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
youtube_dl = "^2021.12.17"
yt-dlp = "^2023.3.4"
aiohttp = "^3.8.4"
aiosqlite = "^0.18.0"
async-timeout = "^4.0.2"
discord = "^2.2.2"
Flask = "^2.2.3"
PyNaCl = "1.5.0"
httpx = "^0.23.3"
bs4 = "^0.0.1"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
